# memluv

./: CMakeLists.txt  README.md
apps/CHStone_v1.8_130128/dfadd/: softfloat-macros  softfloat-specialize  softfloat.c  softfloat.h
apps/CHStone_v1.8_130128/dfmul/: softfloat-macros  softfloat.c
apps/mibench/network/dijkstra/: CMakeLists.txt  dijkstra.h  dijkstra_small.c
apps/mibench/network/dijkstra/hls/: CMakeLists.txt  generic_dijkstra.tcl
apps/mibench/security/sha/: sha.c
apps/phoenix-2.0.0/tests/histogram/: Makefile  histogram-seq.c
apps/phoenix-2.0.0/tests/kmeans/: Makefile  kmeans-seq.c
apps/phoenix-2.0.0/tests/matrix_multiply/: Makefile
apps/phoenix-2.0.0/tests/pca/: Makefile  pca-seq.c
apps/phoenix-2.0.0/tests/word_count/: Makefile  word_count-seq.c
contrib/: config.h  memlib.c  memlib.h  memmgr_no_union.c  mm-naive.c  mm.h  msys.c
doc/: CMakeLists.txt  Doxyfile.in
doc/related/: malloc_JimPlank.txt
etc/: CMakeLists.txt
etc/gnuplot/: plot1.gnu
etc/mtrace/: parse_mtrace.py
etc/obfs/: CMakeLists.txt  obfs.py
etc/pyplot/: plot.py
src/: CMakeLists.txt  Makefile  MemluvConfig.h.in  free.c  free.h  freelist.c  freelist.h  gen_memluv_wrappers.c  gen_memluv_wrappers.h  global.c  global.h  malloc.c  malloc.h  memluv.c  memluv.h  memmgr.c  test_accelerators.c  test_memluv.c  util.c  util.h  yadmm.c
src/gen_kernels/: gen_accelerators.c  gen_accelerators.h  gen_dfadd.c  gen_dfadd.h  gen_dfmul.h  gen_histogram.c  gen_histogram.h  gen_kmeans.c  gen_kmeans.h  gen_mmul.c  gen_mmul.h  gen_pca.c  gen_pca.h  gen_regression.c  gen_regression.h  gen_strmatch.c  gen_strmatch.h
src/hls/: CMakeLists.txt  generic.tcl  generic_accelerators.tcl
src/types/: arraylist.c  arraylist.h
unittest/include/: gen_unittest.h
unittest/src/: gen_unittest.c
util/: chk_endianess.c
