FIND_PACKAGE(Doxygen)

IF(DOXYGEN_FOUND)
  SET(DOXYGEN_LANGUAGE "English" CACHE STRING "Language used by doxygen")
  MARK_AS_ADVANCED(DOXYGEN_LANGUAGE)

SET( DOXYGEN_SOURCE_DIR
  "${CMAKE_BINARY_DIR} ${CMAKE_SOURCE_DIR}/src"
)

STRING(REGEX REPLACE ";" " " CMAKE_DOXYGEN_INPUT_LIST "${DOXYGEN_SOURCE_DIR}")

SET(DOXYGEN_OUTPUT_DIR html)

CONFIGURE_FILE(Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile @ONLY IMMEDIATE)

SET(HTML_TARGET "html" )

ADD_CUSTOM_TARGET(${HTML_TARGET} ALL
  COMMAND ${DOXYGEN_EXECUTABLE} ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
  DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile
)

ELSE(DOXYGEN_FOUND)
  MESSAGE (FATAL_ERROR "Doxygen is needed to build the documentation. Please install it correctly")
ENDIF(DOXYGEN_FOUND)
